# geode-fem

./: .git-blame-ignore-revs  .gitignore  .loom-managed  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package.json
crates/geode-app/: Cargo.toml
crates/geode-app/src/: args.rs  lib.rs  lifecycle.rs  runner.rs
crates/geode-cli/: Cargo.toml
crates/geode-cli/src/: main.rs
crates/geode-core/: Cargo.toml  build.rs
crates/geode-core/benches/: assembly_nedelec.rs  assembly_p1.rs  eigensolve_dense.rs  eigensolve_sparse.rs  mie_end_to_end.rs
crates/geode-core/examples/: eigen_convergence.rs  electrostatic_capacitance.rs  extract_baseline.rs  fiber_smf28_solve_timing.rs  flex_precision_spike.rs  magnetostatic_inductance.rs  mie_driven_scattering.rs  mie_open_quasimode.rs  mie_sphere.rs  motor_torque.rs  patch_antenna.rs  patch_capstone_diffopt.rs  patch_conformal_diffopt.rs  patch_diffopt.rs  regen_cube_convergence_fixture.rs  slcfet_3hp_spiral.rs  slotless_pm.rs  soi_waveguide.rs  spiral_inductor.rs  step_index_fiber.rs  transmon_bench.rs  transmon_diffopt.rs  transmon_pad_diffopt.rs  transmon_pad_harmonic.rs  transmon_quantum.rs
crates/geode-core/examples/common/: viz_export_helper.rs
crates/geode-core/src/: adjoint.rs  arpack.rs  assembly.rs  complex_eigen.rs  complex_lanczos.rs  constants.rs  derham.rs  driven.rs  eigen.rs  extraction.rs  fe_assemble.rs  fiber_lp.rs  iterate.rs  ksp_solve.rs  lanczos.rs  lib.rs  lumped_port.rs  mesh.rs  mie.rs  mie_open.rs  mie_scattering.rs  mohan.rs  nedelec.rs  nedelec_assembly.rs  ntff.rs  p1.rs  patch_cavity.rs  prelude.rs  scattering.rs  shape.rs  silvermuller.rs  silvermuller_self_consistent.rs  sparse.rs  viz_vtu.rs  wave_port.rs  waveguide_modes.rs  whitney_face.rs
crates/geode-core/src/analytic/: dispersion.rs  fiber.rs  formulation_audit.rs  mixed_pencil.rs  mod.rs  patch.rs  slotless_pm.rs  spade_mesh.rs  waveguide.rs
crates/geode-core/src/assembly/: electrostatic.rs  fe.rs  magnetostatic.rs  magnetostatic3d.rs  mod.rs  nedelec.rs  nedelec_matvec.rs  nedelec_p2.rs  p1.rs  sparse.rs  surface.rs  torque.rs
crates/geode-core/src/backend/: mod.rs
crates/geode-core/src/derham/: mod.rs
crates/geode-core/src/driven/: adjoint.rs  extraction.rs  matrix_free.rs  mod.rs  rom.rs  scattering.rs  shape.rs  solve.rs  transient.rs
crates/geode-core/src/eigen/: ams.rs  arpack.rs  cavity.rs  dense.rs  gauge.rs  lanczos.rs  mod.rs  ordering.rs  parallel.rs  projection.rs  transmon.rs  (+1 more)
crates/geode-core/tests/: analytic_cladding_bc_fiber_benchmark.rs  assembly.rs  circular_waveguide_modes.rs  cocg_burn_equivalence.rs  cube_cavity_jax_reference.rs  cube_convergence_regression.rs  derham_curl.rs  derham_divergence.rs  derham_exact_sequence.rs  derham_gauge_invariance.rs  derham_gradient.rs  derham_gradient_kernel.rs  derham_kernel_dim.rs  driven_manufactured.rs  driven_matrix_free_equivalence.rs  driven_p2_adjoint.rs  driven_p2_convergence.rs  driven_upml.rs  eigensolver.rs  electrostatic_capacitance.rs  extraction.rs  faer_qz_debug_overflow_guard.rs  fe_assemble.rs  fiber_dispersion_benchmark.rs  formulation_audit_graddiv.rs  gpu_driven_scaling.rs  high_contrast_fiber_benchmark.rs  iterative_sweep.rs  leontovich_surface_impedance.rs  london_eigen_kinetic_inductance.rs  london_surface_impedance.rs  lp01_profile_selector_benchmark.rs  lumped_port.rs  magnetostatic_heterogeneous.rs  magnetostatic_inductance.rs  magnetostatic_wire.rs  matched_upml_burn.rs  mesh_roundtrip.rs  mie_driven_scattering.rs  mie_sphere.rs  (+53 more)
crates/geode-util/: Cargo.toml
crates/geode-util/src/: compare.rs  convert.rs  eigen.rs  fixture.rs  interop.rs  lib.rs  math.rs  repo.rs  units.rs  viz.rs
crates/geode-validation/: Cargo.toml
crates/geode-validation/src/: diff.rs  fixture.rs  lib.rs  repo.rs
crates/geode-validation/tests/: cube_cavity_jax_reference.rs  cube_cavity_julia_reference.rs  cube_cavity_numpy_reference.rs  cube_cavity_onnx_reference.rs  derham_julia_reference.rs  derham_numpy_reference.rs  mie_efficiencies_numpy_reference.rs  mie_roots_julia_reference.rs  mie_roots_numpy_reference.rs  nedelec_local_numpy_reference.rs  p1_local_numpy_reference.rs  smoke.rs  sphere_mie_jax_reference.rs  sphere_mie_julia_small_reference.rs  sphere_mie_numpy_reference.rs  sphere_mie_tfjava_reference.rs  sphere_pec_jax_reference.rs  sphere_pec_julia_reference.rs  sphere_pec_numpy_reference.rs  sphere_pec_onnx_reference.rs  sphere_pec_tfjava_reference.rs  sphere_pml_jax_reference.rs  sphere_pml_julia_reference.rs  sphere_pml_julia_small_reference.rs  sphere_pml_numpy_reference.rs  sphere_pml_schema_smoke.rs  sphere_pml_tfjava_reference.rs
examples/_support/: Cargo.toml
examples/_support/src/: lib.rs
examples/eigen_convergence/: Cargo.toml
examples/eigen_convergence/src/: main.rs
examples/extract_baseline/: Cargo.toml
examples/extract_baseline/src/: main.rs
examples/fiber_smf28_solve_timing/: Cargo.toml
examples/fiber_smf28_solve_timing/src/: main.rs
examples/mie_driven_scattering/: Cargo.toml
examples/mie_driven_scattering/src/: main.rs
examples/mie_open_quasimode/: Cargo.toml
examples/mie_open_quasimode/src/: main.rs
examples/mie_sphere/: Cargo.toml
examples/mie_sphere/src/: main.rs
examples/patch_antenna/: Cargo.toml
examples/patch_antenna/src/: main.rs
examples/regen_cube_convergence_fixture/: Cargo.toml
examples/regen_cube_convergence_fixture/src/: main.rs
examples/slcfet_3hp_spiral/: Cargo.toml
examples/slcfet_3hp_spiral/src/: main.rs
examples/soi_waveguide/: Cargo.toml
examples/soi_waveguide/src/: main.rs
examples/spiral_inductor/: Cargo.toml
examples/spiral_inductor/src/: main.rs
examples/step_index_fiber/: Cargo.toml
examples/step_index_fiber/src/: main.rs
reference/mom/geode_slcfet_baseline/: Cargo.toml
reference/palace/geode_patch_baseline/: Cargo.toml
reference/palace/geode_spiral_baseline/: Cargo.toml
reference/palace/geode_transmon_baseline/: Cargo.toml
tools/viz/: README.md  pyproject.toml
tools/viz/geode_viz/: __init__.py  io.py  paths.py  style.py
tools/viz/scripts/: plot_benchmark.py
(+1377 files in other folders)
