[workspace]
resolver = "2"
members = [
    "crates/geode-core",
    "crates/geode-cli",
    "crates/geode-validation",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rjwalters/geode-fem"
rust-version = "1.92"

[workspace.dependencies]
burn = { version = "0.21", default-features = false, features = ["std"] }
geode-core = { path = "crates/geode-core" }

[profile.release]
lto = "thin"
codegen-units = 1

# Dense linear algebra (faer) and tensor backends (burn, wgpu) become
# unusably slow without optimization. Keep them optimized even in debug
# builds; only our own crates compile with no-opt for fast iteration.
#
# PR #249 moved the rectangular-waveguide modal pencil off faer 0.24's
# QZ path (which tripped `attempt to subtract with overflow` under
# default debug overflow checks — see issue #244) onto the sparse
# real-symmetric shift-invert Lanczos, so the modal solver itself no
# longer trips the bug. PR #246's diagnostic established that the
# `[profile.*.package."*"] overflow-checks = false` overrides do not
# propagate to dependencies on cargo 1.96, so they were dead code and
# have been removed.
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.test.package."*"]
opt-level = 3
debug = false
