[workspace]
resolver = "2"

members = [
    "crates/*",
    "examples/*",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rjwalters/geode-fem"
rust-version = "1.96.0"

[workspace.dependencies]
# Third-party dependencies — all versions are defined here and referenced
# from child crates via `dep = { workspace = true }` (issue #361). Per-crate
# `features` / `optional` / `default-features` overrides live on the child
# reference and are unioned with the base settings declared here.
burn = { version = "0.21", default-features = false, features = ["std"] }
# Bunsen standard library — machine-checked shape contracts for the FEM
# tensor pipeline (Epic #355, Phase 1: #358). Pinned to the zspacelabs/bunsen
# main commit that carries both upstream fixes this integration depends on:
#   - #95 (hashbrown gated behind `train`, shipped in 0.25.0) — required so a
#     `default-features = false, features = ["std"]` build compiles at all.
#   - #112 (downloader + directories-next made optional behind `cache`, merged
#     2026-07-13) — required so the no-drag gate holds (no network-download
#     machinery in a deterministic solver's dep tree).
# Built `std`-only: NOT the `testing` feature (would pull `burn/flex`) and NOT
# default features (would pull `reflection`/`train`/`xot`/`xee-xpath`/…).
# FOLLOW-UP: swap this git pin for `version = "0.25.1"` once a 0.25.1+ patch
# with the optional downloader lands on crates.io (mechanical one-line change).
bunsen = { git = "https://github.com/zspacelabs/bunsen", rev = "1ff74cd9814d10953e79a995d19db468df4a43ed", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
criterion = "0.5"
# Base faer feature set shared by every consumer; geode-core additionally
# enables `sparse-linalg` on its own reference.
faer = { version = "0.24", default-features = false, features = ["std", "linalg"] }
mshio = "0.4"
num-complex = { version = "0.4", default-features = false, features = ["std"] }
pkg-config = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"

# Workspace-internal crates (path dependencies).
geode-core = { path = "crates/geode-core" }
geode-util = { path = "crates/geode-util" }
geode-app = { path = "crates/geode-app" }
geode-validation = { path = "crates/geode-validation" }

[profile.release]
lto = "thin"
codegen-units = 1

# Dense linear algebra (faer) and tensor backends (burn, wgpu) become
# unusably slow without optimization. Keep them optimized even in debug
# builds; only our own crates compile with no-opt for fast iteration.
#
# ── faer 0.24 QZ overflow-panic suppression (issues #244 / #354) ──────
#
# A handful of tests legitimately exercise faer 0.24's dense QZ
# generalized eigensolver (`linalg::gevd::qz_real`), most notably
# `sphere_pec_eigenmode::sphere_pec_eigenmode_spectrum`, which is
# intended to run under the *default* (debug) `cargo test` profile.
# `qz_real::aggressive_early_deflation` (faer-0.24.0 .../qz_real/mod.rs)
# performs `usize` subtractions that wrap during the QZ iteration; with
# overflow checks enabled those wraps panic with `attempt to subtract
# with overflow` even though the release math is correct. PR #249 moved
# the *rectangular-waveguide* modal pencil off the QZ path onto the
# sparse Lanczos solver, but the sphere PEC eigenmode test (and the
# `--ignored`/`--release` dense eigensolver tests) still go through it.
#
# Why the suppression lives at the PROFILE (not package) level:
# cargo 1.96 cannot disable overflow checks for `faer` via a per-package
# override. `[profile.*.package."*"]` globs do not propagate to
# dependencies (PR #246's finding); and even a *named* override such as
# `[profile.test.package.faer] overflow-checks = false` does NOT take
# effect — the panic at `qz_real/mod.rs` survives it. The reason is that
# cargo will emit `-C debug-assertions=on` for a package override but
# *never* emits `-C debug-assertions=off`, and a live `debug-assertions`
# re-enables the arithmetic overflow check regardless of a package-level
# `overflow-checks=false`. (Verified empirically against cargo 1.96:
# `cargo test --no-run -v` shows the faer rustc line with
# `overflow-checks=off` yet the panic persists.)
#
# A *profile-level* `overflow-checks = false` IS emitted as an explicit
# `-C overflow-checks=off` for every crate in the graph, and an explicit
# `overflow-checks=off` DOES win over `debug-assertions=on`. So the
# working mechanism is a top-level `overflow-checks = false` on the dev
# and test profiles. The blast radius (our own crates also skip integer
# overflow checks in debug/test) is acceptable: no test in the workspace
# relies on an arithmetic-overflow panic (every `#[should_panic]` targets
# an explicit `assert!`/`panic!` message), and release/CI builds are
# unaffected. `tests/faer_qz_debug_overflow_guard.rs` is an always-on
# (non-`#[ignore]`d) regression guard that fails fast with the original
# overflow panic if this suppression is ever removed or stops working.
[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.test.package."*"]
opt-level = 3
debug = false
