[package]
name = "geode-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GEODE-FEM solver primitives: tensor ops over Burn."

[dependencies]
burn = { workspace = true }
faer = { version = "0.24", default-features = false, features = ["std", "linalg", "sparse-linalg"] }
mshio = "0.4"
thiserror = "2"

# Optional: link-time discovery of the system `libarpack` for the `arpack`
# Cargo feature. Bindings to `dsaupd_c` / `dseupd_c` (the stable ARPACK
# ICB C wrappers) are vendored as hand-written `extern "C"` declarations
# in `src/arpack.rs`, so no `bindgen` / `clang` / `gfortran` toolchain is
# required at build time. The build.rs script just runs pkg-config; see
# `## System dependencies` in the README for the platform install
# one-liners.
[build-dependencies]
pkg-config = { version = "0.3", optional = true }

[features]
default = ["wgpu"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
# CPU (ndarray) backend — opt-in, headless. Used by CI (no Vulkan/CUDA
# adapter on the runner) to exercise the `arpack` acceptance test against
# a real backend. Locally the `wgpu` default still wins. `DefaultBackend`
# resolves to `NdArray<f64>` so the f64 ARPACK driver keeps full
# double-precision parity with the dense oracle (1e-6 bound).
ndarray = ["burn/ndarray"]
# Autodiff backend wrapper — opt-in (gradient tests / inverse design).
autodiff = ["burn/autodiff"]
# Enable the ARPACK-backed sparse eigensolver. Off by default — the
# default sparse path is `geode_core::lanczos::SparseShiftInvertLanczos`
# (pure Rust, faer sparse LU under the hood). Turning this on requires a
# working system `libarpack` (Homebrew `arpack`, apt `libarpack2-dev`)
# discoverable via pkg-config; we vendor the FFI declarations ourselves,
# so no C headers or Fortran toolchain are needed at build time. See
# README §System dependencies.
arpack = ["dep:pkg-config"]

[dev-dependencies]
# Self-reference to enable the `autodiff` feature for the gradient tests
# (tests/assembly.rs, tests/nedelec.rs, benches/assembly_p1.rs).
# `default-features = false` is critical: without it this edge would
# re-activate the package's default `wgpu` backend in every test/bench
# build, defeating `--no-default-features` and pulling wgpu onto the
# headless CI runner. The backend now comes solely from the top-level
# feature selection (wgpu by default, or ndarray on CI).
geode-core = { path = ".", default-features = false, features = ["autodiff"] }
# Read regression-fixture TOML in `tests/cube_convergence_regression.rs`.
toml = "0.8"
# Performance benchmark harness (issue #50). Each `[[bench]]` below opts
# out of the libtest harness and lets criterion own the entrypoint.
criterion = "0.5"
# Benches/examples need direct faer access (the trait surface we're
# benching takes `MatRef<f64>` and `SparseColMatRef`). Pinned to the
# same minor as the regular dependency line above.
faer = { version = "0.24", default-features = false, features = ["std", "linalg", "sparse-linalg"] }
# Read criterion's JSON `estimates.json` outputs in
# `examples/extract_baseline.rs` to produce `benchmarks/perf/baseline.toml`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "assembly_p1"
harness = false

[[bench]]
name = "assembly_nedelec"
harness = false

[[bench]]
name = "eigensolve_dense"
harness = false

[[bench]]
name = "eigensolve_sparse"
harness = false

[[bench]]
name = "mie_end_to_end"
harness = false

[lints.rust]
# We intentionally allow scoped `unsafe` only inside the optional ARPACK
# FFI module; every other module remains effectively unsafe-free via the
# `#![deny(unsafe_code)]` inner attribute in `lib.rs`. The `forbid`
# directive was incompatible with feature-gated FFI; `deny` keeps the
# guarantee for the entire default build.
unsafe_code = "deny"
