[package]
name = "geode-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GEODE-FEM solver primitives: tensor ops over Burn."

[dependencies]
burn = { workspace = true, features = ["ndarray"] }

# Bunsen standard library — machine-checked tensor shape contracts
# (`shape_contract!` / `unpack_shape_contract!`) for the FEM assembly
# pipeline (Epic #355). Non-optional: contracts are always-on shape guards on
# the tensor surface, exercised on every backend/feature combo. Built
# `std`-only (see the workspace `bunsen` line for the pinned rev + the two
# upstream fixes it depends on); we deliberately do NOT enable `testing`
# (pulls `burn/flex`) or default features (pull `reflection`/`train`/…).
bunsen = { workspace = true }

# `sparse-linalg` is added on top of the workspace base feature set
# (`std`, `linalg`) for the sparse shift-invert Lanczos eigensolver.
faer = { workspace = true, features = ["sparse-linalg"] }
mshio = { workspace = true }
thiserror = { workspace = true }
# Backend-name matching for `testing::device_tolerances` (find/`is_match`
# semantics over `Backend::name`). Only pulled in under the `testing`
# feature; not part of the default solver build.
regex = { workspace = true, optional = true }
# Parses the [oracles.palace] block of the benchmark results TOMLs in
# `src/palace.rs` (issue #239 — operator-assisted Palace 3D oracle
# scaffolding). Same major as the existing dev-dep usage in the
# benchmark tests.
toml = { workspace = true }

# Optional: link-time discovery of the system `libarpack` for the `arpack`
# Cargo feature. Bindings to `dsaupd_c` / `dseupd_c` (the stable ARPACK
# ICB C wrappers) are vendored as hand-written `extern "C"` declarations
# in `src/arpack.rs`, so no `bindgen` / `clang` / `gfortran` toolchain is
# required at build time. The build.rs script just runs pkg-config; see
# `## System dependencies` in the README for the platform install
# one-liners.
[build-dependencies]
pkg-config = { workspace = true, optional = true }

[features]
default = []

wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
# Flex CPU backend (burn-flex, pure Rust) — SPIKE-ONLY wiring for issue #451.
# Exposed solely to compile the `flex_precision_spike` example, which probes
# whether Epic #374's proposed `flex` CPU migration can deliver the f64 precision
# the ARPACK / cube-cavity oracles rely on. Off by default; not a supported
# solver backend and not exercised by any production code path or CI lane. The
# spike example itself opts into this feature via `required-features` below, so
# it is skipped for the default (and every other) feature selection.
flex = ["burn/flex"]
# Apple-GPU backend — opt-in, local-only (Apple platforms). `burn::backend::Metal`
# is `Wgpu<f32, i32, u8>` pinned to the Metal graphics API / MSL (`cubecl-msl`)
# shader pipeline; it shares the f32 GPU posture of `wgpu`/`cuda`. Mutually
# exclusive with `wgpu` and `cuda`. Not exercised on CI (no Apple runner); verify
# locally with `cargo run --bin geode --no-default-features --features metal`.
metal = ["burn/metal"]
# Autodiff backend wrapper — opt-in (gradient tests / inverse design).
autodiff = ["burn/autodiff"]
# Enable the ARPACK-backed sparse eigensolver. Off by default — the
# default sparse path is `geode_core::lanczos::SparseShiftInvertLanczos`
# (pure Rust, faer sparse LU under the hood). Turning this on requires a
# working system `libarpack` (Homebrew `arpack`, apt `libarpack2-dev`)
# discoverable via pkg-config; we vendor the FFI declarations ourselves,
# so no C headers or Fortran toolchain are needed at build time. See
# README §System dependencies.
arpack = ["dep:pkg-config"]

testing = ["dep:regex"]

[dev-dependencies]
# Self-reference to enable the `autodiff` feature for the gradient tests
# (tests/assembly.rs, tests/nedelec.rs, benches/assembly_p1.rs).
# `default-features = false` is critical: without it this edge would
# re-activate the package's default `wgpu` backend in every test/bench
# build, defeating `--no-default-features` and pulling wgpu onto the
# headless CI runner. The backend now comes solely from the top-level
# feature selection (wgpu by default, or ndarray on CI).
geode-core = { path = ".", default-features = false, features = ["testing", "autodiff"] }
geode-util = { workspace = true }
# Read regression-fixture TOML in `tests/cube_convergence_regression.rs`.
toml = { workspace = true }
# Performance benchmark harness (issue #50). Each `[[bench]]` below opts
# out of the libtest harness and lets criterion own the entrypoint.
criterion = { workspace = true }
# Benches/tests need direct faer access (the trait surface we're
# benching takes `MatRef<f64>` and `SparseColMatRef`). Same feature set as
# the regular dependency line above (workspace base + `sparse-linalg`).
faer = { workspace = true, features = ["sparse-linalg"] }
# Parse the committed `benchmarks/*/baseline.json` perf baselines in the
# `tests/spiral_inductor_benchmark.rs` and `tests/slcfet_3hp_benchmark.rs`
# regression tests (`serde_json::Value`). The criterion → baseline.toml
# extractor itself now lives in the standalone `examples/extract_baseline`
# crate (Epic #398), which carries its own serde/serde_json dev-deps.
serde_json = { workspace = true }

# SPIKE-ONLY (issue #451): probes f64 precision on the burn-flex CPU backend.
# Gated behind the `flex` feature so it is skipped for the default build and
# every non-`flex` feature selection; run explicitly with:
#   cargo run -p geode-core --example flex_precision_spike \
#       --no-default-features --features flex --release
[[example]]
name = "flex_precision_spike"
required-features = ["flex"]

[[bench]]
name = "assembly_p1"
harness = false

[[bench]]
name = "assembly_nedelec"
harness = false

[[bench]]
name = "eigensolve_dense"
harness = false

[[bench]]
name = "eigensolve_sparse"
harness = false

[[bench]]
name = "mie_end_to_end"
harness = false

[lints.rust]
# We intentionally allow scoped `unsafe` only inside the optional ARPACK
# FFI module; every other module remains effectively unsafe-free via the
# `#![deny(unsafe_code)]` inner attribute in `lib.rs`. The `forbid`
# directive was incompatible with feature-gated FFI; `deny` keeps the
# guarantee for the entire default build.
unsafe_code = "deny"
