[package]
name = "geode-validation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cross-backend reference comparison harness for GEODE-FEM (Epic #88, Phase A)."

[dependencies]
# Repo-relative paths + git provenance (`repo_root` / `current_commit` /
# `fixture_path`) live in `geode-util`; re-exported at this crate's root so
# the reference-test suite keeps its existing call sites (Epic #414, Phase 2).
geode-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Complex scalar type for c128 fixture fields (Phase H scaffolding,
# issue #145). Already a transitive dep via faer + ndarray; pinned here
# directly so the comparator API surface doesn't depend on which feature
# combo pulls it in.
num-complex = { workspace = true }

[dev-dependencies]
# The cube-cavity cross-backend integration test (#92) runs the full Burn
# pipeline (mesh I/O, P1 assembly, Dirichlet, dense generalized eigensolve)
# against the NumPy reference fixture. The geode-core backend is selected
# via the workspace's `--features` flags at test invocation time; CI runs
# `cargo test -p geode-validation --features geode-core/ndarray` for the
# f64 cross-check, and the default `cargo test` falls back to geode-core's
# default `wgpu` (or `ndarray` if it wins precedence under unification).
geode-core = { workspace = true, features = ["testing"] }
burn = { workspace = true }
# Direct faer access in the cube-cavity test: we materialize the K_int /
# M_int interior matrices via `burn_matrix_to_faer`, then call
# `generalized_eigen` directly to recover both eigenvalues AND
# eigenvectors (the existing `EigenSolver` trait surface only returns
# eigenvalues — extending it is tracked as a follow-up). Uses the
# workspace base faer feature set (`std`, `linalg`); no `sparse-linalg`.
faer = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
