[package]
name = "geode-examples-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared, example-only viz glue for the GEODE-FEM standalone example crates (thin re-export of geode_util::viz pending Phase 3 decommission)."

[dependencies]
# The reconstruction now lives in `geode_util::viz`; this crate is a thin
# re-export (Epic #414 Phase 2, issue #419) pending full decommission in
# Phase 3.
geode-util = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
