[package]
name = "mie_open_quasimode"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Matched (full Sacks) UPML open-space quasi-mode benchmark vs. open-space Mie WGM complex roots (issue #213)."

[[bin]]
name = "mie_open_quasimode"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
geode-app = { workspace = true }
geode-core = { workspace = true }
# `BackendTypes` device handle for the Burn Nédélec assembly.
burn = { workspace = true }
# `sparse-linalg` is added on top of the workspace base feature set
# (`std`, `linalg`) for the sparse shift-invert Lanczos eigensolver path
# (`SparseColMat` / `Triplet`), matching geode-core's own faer reference.
faer = { workspace = true, features = ["sparse-linalg"] }

# NOTE: this crate deliberately defines NO backend features. The Burn
# backend (`wgpu` by default, or `ndarray` on headless CI) is selected by
# geode-core's default features / the workspace `--features` flags at build
# time, exactly like `geode-cli` and `geode-validation`.

[lints.rust]
unsafe_code = "forbid"
