[package]
name = "regen_cube_convergence_fixture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Regenerate the committed cube-convergence regression fixture (crates/geode-core/tests/fixtures/cube_convergence.toml); --release required."

[[bin]]
name = "regen_cube_convergence_fixture"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
geode-app = { workspace = true }
geode-core = { workspace = true, features = ["testing"] }
geode-validation = { workspace = true }
# `BackendTypes` device handle for the P1 assembly upload.
burn = { workspace = true }

# NOTE: this crate deliberately defines NO backend features. The Burn
# backend (`wgpu` by default, or `ndarray` on headless CI) is selected by
# geode-core's default features / the workspace `--features` flags at build
# time, exactly like `geode-cli` and `geode-validation`.

[lints.rust]
unsafe_code = "forbid"
